[package]
name = "mirrorworld-sdk-rust"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Best support for Solana Mobile and help you accumulate seed users in a fast and cheap way"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"